--- a/src/app/pages/tabs-nav/tabs-nav.component.html
+++ b/src/app/pages/tabs-nav/tabs-nav.component.html
@@ -1,19 +1,22 @@
 <BottomNavigation selectedIndex="0">
 
-
     <TabStrip>
+
         <TabStripItem>
             <Label text="Inicio"></Label>
             <Image src="font://&#xe88a;" class="ico ico-font bounce"></Image>
         </TabStripItem>
-        <TabStripItem `>
+
+        <TabStripItem>
             <Label text="Pedidos"></Label>
             <Image src="font://&#xe242;" class="ico ico-font bounce"></Image>
         </TabStripItem>
-        <TabStripItem `>
+
+        <TabStripItem>
             <Label text="Perfil"></Label>
             <Image src="font://&#xe853;" class="ico ico-font bounce"></Image>
         </TabStripItem>
+
     </TabStrip>
 
     <TabContentItem>
