--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -38,7 +38,7 @@
     }
     
     .input-cantidad {
-        font-size: 24;
+        font-size: 28;
         margin: 5 5 5 5;
         text-align: center;
     }
@@ -168,17 +168,11 @@
             opacity: 1;
         }
     }
-    /* @keyframes lightSpeedOut {
-        from {
-            opacity: 1;
-        }
-        to {
-            transform: translate3d(100%, 0, 0) skewX(30deg);
-            opacity: 0;
-        }
+    
+    .font-small {
+        font-size: 11;
     }
     
-    .lightSpeedOut {
-        animation-name: lightSpeedOut;
-        animation-timing-function: ease-in;
-    } */
+    .font-15x {
+        font-size: 17;
+    }
