--- a/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
+++ b/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
@@ -1,7 +1,7 @@
 <ns-action-bar title="Detalle" class="action-bar">
 
-    <ActionItem *ngIf="!isLoading" (tap)="borrarOrden(orden._id)" class="m-10">
-        <Button class="ico btn btn-flat btn-active iconDelete action-item" [text]="iconDelete"></Button>
+    <ActionItem *ngIf="!isLoading" (tap)="borrarOrden(orden._id)" ios.position = "right" class="m-10">
+        <Button class="ico btn btn-flat btn-active iconDelete action-item" [text] = "iconDelete"></Button>
     </ActionItem>
 
 </ns-action-bar>
