--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -8,7 +8,7 @@
             <Label [text]="iconEmail" row="0" col="0" class="ico icon-login"></Label>
             <TextField row="0" col="1" [isEnabled]="!_usuarioService.processing" hint="Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-rounded" required></TextField>
             <Label [text]="iconPassword" row="1" col="0" class="ico icon-login"></Label>
-            <TextField row="1" col="1" [isEnabled]="!_usuarioService.processing" hint="Contraseña" secure="true" returnKeyType="done" [(ngModel)]="password" class="input input-rounded" required></TextField>
+            <TextField row="1" col="1" [isEnabled]="!_usuarioService.processing" hint="Contraseña" secure="true" returnKeyType="done" [(ngModel)]="password" class="input input-rounded" required (returnPress)="ingresar()"></TextField>
         </GridLayout>
 
         <Button text="Ingresar a tu Cuenta" [isEnabled]="!_usuarioService.processing" class="btn-primary btn-active m-t-5" (tap)="ingresar()"></Button>
