--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -17,7 +17,7 @@
         <Button class="btn btn-flat btn-active action-item iconos ico" text="cerrar"></Button>
     </ActionItem>
 
-    <SearchBar class="searchbar lightSpeedIn" *ngIf="aparecer" hint="Buscar producto..." (textChange)="buscarProducto($event)"></SearchBar>
+    <SearchBar class="searchbar lightSpeedIn" *ngIf="aparecer" hint="Buscar producto..." (textChange)="buscarProducto($event)" (onsubmit)="onSubmit()"></SearchBar>
 
 </ns-action-bar>
 
