--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,16 +1,8 @@
 /* Estilo Login */
 
-FlexboxLayout {
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-image: url("~/assets/images/background.png");
-}
-
 StackLayout {
-    width: 300;
-    padding: 10 15;
-    background-color: #f0f0f0;
+    padding: 10 10;
+    background-color: white;
     border-radius: 7;
 }
 
@@ -37,26 +29,19 @@ TextField {
 
 TextField {
     placeholder-color: #2d3440;
+    background-color: #eeeeee;
     vertical-align: center;
-    /* color: black; */
+    opacity: 0.8;
+    padding-left: 15;
+    height: 50;
+    font-size: 16;
+    border-radius: 7;
 }
 
 .icon-login {
     font-size: 20;
     vertical-align: center;
     padding: 5 5 15 5;
-    /* horizontal-align: center;
-    width: 20;
-    height: 20; */
-}
-
-.label {
-    text-align: center;
-    height: 18;
-    font-size: 12;
-}
-
-.label-login {
-    font-weight: bold;
-    margin-left: 5;
+    color: #2d3440;
+    opacity: 0.8;
 }
