--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,12 +1,12 @@
-<FlexboxLayout>
+<FlexboxLayout class="page">
 
-    <StackLayout class="form ico elevation" androidElevation="4">
+    <StackLayout class="ico elevation" androidElevation="4">
 
         <Image src="~/assets/images/logo.png"></Image>
 
         <GridLayout rows="auto, auto" columns="auto, *">
             <Label [text]="iconEmail" row="0" col="0" class="ico icon-login"></Label>
-            <TextField row="0" col="1" [isEnabled]="!_usuarioService.processing" hint="Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-rounded" required></TextField>
+            <TextField row="0" col="1" [isEnabled]="!_usuarioService.processing" hint="Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-border" required></TextField>
             <Label [text]="iconPassword" row="1" col="0" class="ico icon-login"></Label>
             <TextField row="1" col="1" [isEnabled]="!_usuarioService.processing" hint="Contraseña" secure="true" returnKeyType="done" [(ngModel)]="password" class="input input-rounded" required (returnPress)="ingresar()"></TextField>
         </GridLayout>
